# spatula

./: pyproject.toml
src/: __main__.py
