[Spatula Workshop]
name = "spatula_workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "sprinkles24", email = "shylasingal@gmail.com" }]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
spatula-project = "spatula_project:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true